2006-10-18  Marc Singer  <elf@zealous.synapse.com>

	* Makefile: v1.4.7

	* src/mach-lh7a40x/preinitialization-companion.c:
	Preinitialization support to work-around limitation in Sharp Boot
	ROM.  The ROM only loads 512 bytes from modern NAND parts.  We
	need to pull more of this down in order to properly initialize the
	system and copy the loader to SDRAM.

	* src/drivers/drv-nand.c: Genericized NAND driver.

	* src/drivers-lh/drv-clcdc.c: New panels.  Reorganized the panel
	setup code to better conform to standard nomenclature.

	* src/drivers/drv-dm9000.c: Support for more than one DM9000
	chip.  It can write to both mac address roms as well.
	
2006-08-18    <elf@scarlet.buici.com>

	* src/drivers/drv-fis.c (compare_skips): Fixed the comparison
	function.  The sign sense was wrong and it sorted to the wrong
	order.

2006-08-12    <elf@scarlet.buici.com>

	* Makefile (SUBLEVEL): v1.4.3

	* src/drivers/drv-fis.c (fis_report): Added skips to the report.

	* debian/rules: Removed headerization so that slugimage can be
	responsible for it. 

	* src/drivers/drv-fis.c: Added skip descriptor handling.  This
	means that partitions may include 'skips' where some data
	physically located in the partition is ignored when performing IO
	on the partition.  This feature was added for the slug with a dumb
	version of Redboot that ignores the partition table when looking
	for the data it must copy to SDRAM.
 
	* src/apex/cmd-fill.c (cmd_fill): Removed unwanted printf.

	* src/lib/sort.c (sort): Check for degenerate cases of sorting 0
	or 1 element.

	* debian/*: Fixed the control file and and changelog to properly
	reflect this release.

2006-07-30  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): Rolling revision in preparation for release
	of the BSP. apex-1.4.2

	* src/mach-lh7952x/env.c: Moved all lh7952x's to use the
	amba-pl011 serial driver in the kernel.

2006-07-29  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-clcdc.c (clcdc_release): Revised the order of